[metadata]
name = pydata_master
version = 0.0.2
author = Thinh Vu
author_email = mrthinh@live.com
description = All frequently used functions in one package for the data operation in a daily basis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinh-vu/pydata_master
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.7
